日常log 提交保存

--- a/notebook/游戏相关的功能.md
+++ b/notebook/游戏相关的功能.md
@@ -61,6 +61,9 @@ MonitorM.lua
 -- 收藏品类型
 BONUS_TYPE_COLLECTION
 
+-- 作弊码描述界面
+UITowerBuffInfo.lua
+
 ```
 
 
@@ -159,8 +162,6 @@ SERVER_STATUS_D->set_server_status(MODULE_SWITCH_PARTNER_ALBUM_CLOSE, 0)
 ~~作弊码的评论，需要和52彩蛋的评论分开~~
 
 ~~新作弊码的评论页面的外框，需要和旧的作弊码的外框做区分~~
-
-
 
 
 
@@ -272,4 +273,279 @@ UIPetEnsemble
   + 上下阵：需要考虑 蜗牛属性与非蜗牛属性情况的阵型处理
 
 
+
+####  宠物狩猎系统
+
++ 宠物出战详情
+
+  + 气泡下方的红字，会说明“临时编队，不会改变兽栏设置的阵容！
+
+    <span style="color:red">问: </span>
+
++ 同调共鸣
+
+   同调位解锁5个 ---> 触发突发事件 --> 完成突发事件 --> 解锁同调共鸣
+
+  ​	初始解锁1个，后续花费白蝌蚪解锁，最多10个共鸣位
+
+  
+
+  + 同调宠物，表示同调转化功能中，战力最低的宠物
+
+    <span style="color:red">问：名词解释是否有误，宠物同调化功能是自动选择战力最高的5位房主</span>
+
+    <span style="color:green">答：复制同调宠物中战力最低的宠物，到共鸣宠物中，最终的等级与资质以同调宠物为准</span>
+
+  + 共鸣宠物，表示玩家在同调共鸣功能中，手动添加的宠物。
+
+    <span style="color:red">问： 手动选择的界面是否缺失？</span>
+
+    <span style="color:green">答：与编辑阵型中选择宠物的界面类似</span>
+
+  + 同调转化的宠物不足5个时，同调共鸣功能不会起效。
+
+    <span style="color:red">问：同调宠物不足5个，但是同调位解锁5个，事件触发，以及共鸣的开启是否照常进行</span>
+
+    <span style="color:green">答：功能照常开启。 共鸣是否有效果与开启并无关系</span>
+
+  + 同调宠物的等级与资质，将复制到共鸣宠物上
+
+    <span style="color:red">问：同调宠物总5个，共鸣宠物10个？ 如何复制。 资质指的是战斗四围吗?</span>
+
+    <span style="color:green">答：复制战力最低的那个同调宠物的等级和资质。</span>
+
+  + 共鸣宠物，无法进行升级、升资质、升星痕、更换装备。
+
+    <span style="color:red">问：是否宠物升级，升星，宠物装备等功能中要判断是否是狩猎中的共鸣宠物</span>
+
+    <span style="color:green">是</span>
+
+  + 若共鸣宠物等级与资质高于同调宠物，其数据也会被覆盖。
+
+    <span style="color:red">问：覆盖指的是共鸣宠物被覆盖吗？ 以同调宠物为准？</span>
+
+    <span style="color:green">答：是的，以同调宠物为准</span>
+
+  + 若同调宠物因战力调整，变更为其他宠物，共鸣宠物也会实时更新。
+
+    <span style="color:red">问：问题如上述问题所述</span>
+
+    <span style="color:green">答：以同调宠物为准，所以同调宠物战力变更的话，共鸣宠物的数据也会有对应的变更</span>
+
+    
+
++ 巡逻事件
+
+  + 事件的配置表在哪里提供？
+  + 
+
+
+
+#### 狩猎开发任务安排
+
++ 完成怪物详情 （周二）
+  + 界面参数传入
+  + 怪物的四围属性
+  + 奖励列表
+  + 战力输赢估算
+  + 地貌特征
+  + 弱点绘制
++ 同调共鸣界面拼接，同调共鸣介绍界面 (周二，周三)
+  + 共鸣主页界面拼接 （周二）
+  + 共鸣界面详细介绍 （周二）
+  + 同调共鸣界面绘制，选择宠物 （周三）
+    + 是同调宠物不能被选择
+    + 与服务端通信
+
+
+
++ 巡逻事件（周四、周五）
+
+<span style="color:red">策划编写: CALC_PET_COMBAT_RESULT</span>
+
+```lua
+-- 模拟宠物战斗结果，公式，由策划编写
+CALC_PET_COMBAT_RESULT
+
+-- 宠物功能开关
+SERVER_STATUS_D->set_server_status(MODULE_SWITCH_PET_CLOSE,0)
+
+-- 开启重启之战功能
+SERVER_STATUS_D->set_server_status(MODULE_SWITCH_RESTART_MAP_CLOSE,0)
+
+-- 时光机是否升级完成
+SCENARIO_D->set(UOB, "time_machine_upgraded", 1)
+
+-- 同调共鸣功能的开启
+SCENARIO_D->set(UOB, "pet_resonance", 1)
+
+-- 同调共鸣位
+UOB->query("pet_resonance");
+UOB->set("pet_resonance", 1);
+UOB->notify_fields_updated("pet_resonance")
+
+-- 同调共鸣宠物
+UOB->query("resonate_pets");
+```
+
+
+
+#### 同调共鸣的服务端公式
+
+```c
+[CALC_PET_CONNECTOR_RESONANCE_UNLOCK_COND] // 取得宠物同调共鸣位置解锁条件
+input: object user, int pos
+output: int
+{
+    return 2 + (pos - 2) * 2;
+}
+
+[CALC_PET_CONNECTOR_RESONANCE_UNLOCK_COST] // 取得宠物同调共鸣位置解锁消耗
+input: object user, int pos
+output: array
+{
+    int count = 1000 * (pos - 1);
+    if (pos == 10)
+        count = 10000;
+    return ({ ({ BONUS_TYPE_ATTRIB, "gem", count }) });
+}
+
+[CALC_PET_CONNECTOR_RESONANCE_CD_COST] // 取得宠物同调共鸣位置CD清除消耗
+input: object user, int t
+output: array
+{
+    int count = maximum(0, 10 * ceil((float) (t - time()) / 3600));
+    if (count == 0)
+        return EMPTY_ARRAY;
+    return ({ ({ BONUS_TYPE_ATTRIB, "gem", count }) });
+}
+
+```
+
+1. 上阵  -- 等待调试
+
+2. 下阵 -- 等待调试
+
+3. 解锁 -- 等待调试
+
+4. CD 消除 -- 界面表现还未完成
+
+5. 添加共鸣宠物的彩虹字表现未完成。
+
+6. 首次解锁共鸣功能的判断-- 与胡瑞玉对
+
+7. <span style="color:red">点击同调宠物，弹出评论界面</span>
+
+   
+
+   
+
+   #### 新安排进来的任务
+
+    <span style="color:red">蜗牛格斗场：（周二早上）</span>
+
+    + 提示预设宠物后，使用白蝌蚪挑战失败
+   + 发起战斗，罗盘的提示需要补充
+
+   
+
+   #### 巡逻事件
+
+   + 界面
+
+   + 事件类型分别响应
+
+     + 空投
+
+       <span style="color:red">策划配置的空投奖励</span>
+
+       <span style="color:red">CALC_PET_EXPLORE_AIR_DROP_BONUS</span>
+
+       ```lua
+       -- 获取空投数据， 消息号
+       fetch_explore_event_data
+       
+       -- 领取空投奖励
+       do_explore_event
+       
+       -- 物种战争，参考界面
+       UIGroupWarJackpot.lua
+       ```
+
+       <span style="color:red">1. 开宝箱效果播放完之后，请求开启宝箱，成功后关闭界面</span>
+
+     + 祝福祭坛
+
+       + 事件配置信息
+       + 获得祝福界面
+       + 获得后效果表现
+
+       ```lua
+       -- TODO 
+       -- 1. 获得祝福buff后跳转老虎机主界面，播放buff，  to hury
+       UIPetExploreEvent.lua 
+       
+       -- 2. 打开事件界面 UIPetExploreTreasureEvent.lua ,  参数传入需要改成读取事件表的数据
+       
+       --3. 奖励信息，或者添加展示信息的按钮未添加
+       ```
+
+       
+
+     + 区域事件列表
+
+       <span style="color:red">TODO LIST</span>
+
+       <span style="color:red">1. 区域事件列表配表</span>
+
+       <span style="color:red">2. 界面表现</span>
+
+   + 事件进度与倒计时
+
+     + 重复事件显示倒计时
+     + 一次性事件显示进度
+
+   + 奖励领取
+
+   + 与使徒挑战界面对接
+
+   ```lua
+   -- 事件信息
+   
+   explore_events = EMPTY_MAPPING;
+   explore_events[2] = (["count":1])
+   explore_events[2]["time"] = time()+24 * 3600
+   
+   explore_events = UOB->query("explore_events")
+   explore_events[7] = (["count":1])
+   explore_events[7]["time"] = time()+24 * 3600
+   UOB->set("explore_events", explore_events)
+   UOB->notify_fields_updated("explore_events")
+   
+   UOB->query("explore_events");
+   
+   explore_events:
+   {
+       id: int -- 事件id
+       count:int -- 事件触发次数， 每次执行事件数量 减1
+       time:int -- 本轮空投的结束时间点/ 该字段针对空投事件
+       
+   }
+   
+   -- 触发过的一次性事件
+   UOB->query("explore_event_history");
+   
+   --执行事件逻辑
+   do_explore_event
+   
+   -- 取巡逻事件数据
+   fetch_explore_event_data
+   
+   -- 背景图
+   notebook_frame_treasureuse
+   ```
+
+   
+
+   
 
