记录功能点

--- a/notebook/工作文档.md
+++ b/notebook/工作文档.md
@@ -60,3 +60,11 @@ GitLab：http://10.2.48.180
 初始密码：00000000
 ```
 
+
+
+## LPC 文档
+
+```lua
+http://10.2.48.228/pages/viewpage.action?pageId=520723276
+```
+
