--- a/notebook/操作命令.md
+++ b/notebook/操作命令.md
@@ -29,6 +29,9 @@
   --- 输出debug 消息，可以看到客户端发给服务端的消息
    > COMMAND_D->debug_on()
   
+  -- 保存服务端当前玩家的数据
+  > UOB->save()
+  
   ```
 
   
@@ -87,3 +90,100 @@
   ```
   
   
+
+### 添加评论
+
++ 数据配表
+
+  添加一个巡逻事件的评论：pet_explore_event
+
+  ```lua
+  -- bbs.lua 文件
+  BBS_PET_EXPLORE_EVENT  = 105 -- 宠物巡逻事件
+  
+  --bbs.csv 文件
+  "@BBS_PET_EXPLORE_EVENT","bbs_pet_explore_event",,"宠物巡逻事件",
+  
+  -- bbs.h 文件
+  #define BBS_PET_EXPLORE_EVENT   105 // 巡逻事件
+  ```
+
+  
+
+  bs_database.xml 
+
+  添加表名与字段名
+
+  ```xml
+  <table name = bbs_pet_explore_event >
+              <primary field = rid                       type = string           len = 16 />
+              <key     field = class_id                  type = string           len = 16 />
+              <key     field = owner                     type = string           len = 16 />
+              <key     field = user                      type = string           len = 24 />
+              <key     field = praise                    type = int              len = 10 />
+              <key     field = create_time               type = time             len = 16 />
+              <key     field = status                    type = int              len = 3  />
+              <key     field = reply_total               type = int              len = 10 />
+              <key     field = is_top                    type = int              len = 2  />
+              <key     field = is_best                   type = int              len = 2  />
+              <key     field = weight                    type = int              len = 12  />
+              <key     field = operator                  type = string           len = 32 />
+              <key     field = classify                  type = string           len = 32 />
+              <key     field = check_time                type = int              len = 12 />
+              <pack    field = misc                                                       />
+              <index   name  = index_pet_explore_event_class_id   type = normal  fields = "class_id"/>
+              <index   name  = index_pet_explore_event_status     type = normal  fields = "status"/>
+              <index   name  = index_pet_explore_event_user       type = normal  fields = "user"/>
+              <index   name  = index_pet_explore_event_time       type = normal  fields = "create_time"/>
+              <index   name  = index_pet_explore_event_praise     type = normal  fields = "praise"/>
+              <index   name  = index_pet_explore_event_owner      type = normal  fields = "owner"/>
+              <index   name  = index_pet_explore_event_is_top     type = normal  fields = "is_top"/>
+              <index   name  = index_pet_explore_event_is_best    type = normal  fields = "is_best"/>
+              <index   name  = index_pet_explore_event_weight     type = normal  fields = "weight"/>
+              <index   name  = index_pet_explore_event_operator   type = normal  fields = "operator"/>
+              <index   name  = index_pet_explore_event_classify   type = normal  fields = "classify"/>
+              <index   name  = index_pet_explore_event_check_time type = normal  fields = "check_time"/>
+          </table>
+  
+          <table name = bbs_pet_explore_event_praise >
+              <primary field = rid                       type = string           len = 16 />
+              <key     field = user                      type = string           len = 24  />
+              <key     field = commend                   type = string           len = 16  />
+              <index   name  = index_bbs_pet_explore_event_user_commend    type = normal  fields = "user,commend"/>
+          </table>
+  ```
+
+  
+
+#### 客户端性能打印
+
+  问dc
+
+#### 客户端开启接口缓存
+
+``` lua
+-- 具体实现逻辑尚未查看
+PropM.executeWithPropCache
+```
+
+
+
+#### 美术字体的2种调用方式
+
+```lua
+-- 数字模板
+addNumberAtlasTemplelate(timeNode, remainingTimeDesc2(time), "/0123456789:d", "number26");
+
+-- 带全路径
+local path = "images/ui/number/number_arena_left_time.png";
+addNumberAtlasNodeEx(timeNode, timeStr, "/0123456789:d", path, 20, 22, -8, nil, nil, nil);
+```
+
+##### 呼吸效果
+
+```lua
+doModelBreath(node, 1, 0.97)
+```
+
+
+
